            - The Roles can now be disabled.
            - In the fields' configuration, fields can now be set as required but only at creation.
            - The CustomFields can now get:
                - a description, which is used as help text in forms.
                - a default value, which is used as initial value in creation forms.
        * Billing :
            - Invoices, Quotes & Sales Order got a "card" hat-block, which is used by default by new installations.
            - You can now export several Invoices or Quotes at once, as a .zip archive.
            - In list-views, the columns for "Total with VAT" & "Total without VAT" display the
              Sum & Average values for these fields (on all entities related to the list).
        * Opportunities :
            - In list-views, the columns for "Estimated sales" & "Made sales" display the
              Sum & Average values for these fields (on all entities related to the list).

  Developers side :
  -----------------
    - The version of 'QUnit' is now '2.24.1'.
      If you have implemented some javascript unit tests, you should probably read the upgrade guide to QUnit 2.x :
       - https://qunitjs.com/upgrade-guide-2.x/

    Non breaking changes :
    ----------------------
        # Deprecations :
            - The context processor "creme_core.context_processors.get_entities_deletion_allowed"
              is now deprecated (it injected "ENTITIES_DELETION_ALLOWED" in contexts) ;
              it has been removed from the default settings.
            - In 'creme_core.bricks', these classes have been moved :
                - 'JobResultsBrick', 'JobErrorsBrick' & 'EntityJobErrorsBrick' to 'creme_core.gui.job'.
                - 'MassImportJobErrorsBrick' to 'creme_core.creme_jobs.mass_import'.
                - 'TrashCleanerJobErrorsBrick' to 'creme_core.creme_jobs.trash_cleaner'.
            - In 'creme_core.models' :